[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
coin = ExtResource( 3 )
playtime = 10

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0117647, 0, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 260 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 280, 260 )

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
